
java_library(
    name = "algosdk",
    exports = [
        "//src/main/java/com/algorand/algosdk/algod:algod",
        "//src/main/java/com/algorand/algosdk/kmd:kmd",
        "//src/main/java/com/algorand/algosdk/account:account",
        "//src/main/java/com/algorand/algosdk/crypto:crypto",
        "//src/main/java/com/algorand/algosdk/mnemonic:mnemonic",
        "//src/main/java/com/algorand/algosdk/transaction:transaction",
        "//src/main/java/com/algorand/algosdk/util:util",
    ],
    visibility = ["//visibility:public"],
)

