
java_library(
    name = "algosdk",
    exports = [
        "//:algosdk_core",
        "//:algosdk_rest_api",
    ],
    visibility = ["//visibility:public"],
)

java_library(
    name = "algosdk_core",
    exports = [
        "//src/main/java/com/algorand/algosdk/account:account",
        "//src/main/java/com/algorand/algosdk/crypto:crypto",
        "//src/main/java/com/algorand/algosdk/mnemonic:mnemonic",
        "//src/main/java/com/algorand/algosdk/transaction:transaction",
        "//src/main/java/com/algorand/algosdk/util:util",
    ],
    visibility = ["//visibility:public"],
)

java_library(
    name = "algosdk_rest_api",
    exports = [
        "//src/main/java/com/algorand/algosdk/algod/client:client",
        "//src/main/java/com/algorand/algosdk/algod/client/api:api",
        "//src/main/java/com/algorand/algosdk/algod/client/auth:auth",
        "//src/main/java/com/algorand/algosdk/algod/client/model:model",
        "//src/main/java/com/algorand/algosdk/kmd/client:client",
        "//src/main/java/com/algorand/algosdk/kmd/client/api:api",
        "//src/main/java/com/algorand/algosdk/kmd/client/auth:auth",
        "//src/main/java/com/algorand/algosdk/kmd/client/model:model",
    ],
    visibility = ["//visibility:public"],
)

# Generate a POM file for Maven integration
load("@bazel_common//tools/maven:pom_file.bzl", "pom_file")

pom_file(
    name = "algosdk_pom",
    targets = [
        "//:algosdk",
    ],
    template_file = "pom_template.xml",
    substitutions = {
        '{group_id}': 'com.algorand',
        '{artifact_id}': 'algosdk',
    },
)