
java_library(
    name = "account",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/com/algorand/algosdk/auction:auction",
        "//src/main/java/com/algorand/algosdk/crypto:crypto",
        "//src/main/java/com/algorand/algosdk/mnemonic:mnemonic",
        "//src/main/java/com/algorand/algosdk/transaction:transaction",
        "//src/main/java/com/algorand/algosdk/util:util",
        "@maven//:org_bouncycastle_bcprov_jdk15on", # unfortunate dep for parsing X.509 formats
    ],
)
