
java_library(
    name = "auction",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/com/algorand/algosdk/crypto:crypto",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
    ],
    tags = [
        "maven_coordinates=com.fasterxml.jackson.core:jackson-annotations:2.7.0",
    ],
)
