
java_library(
    name = "crypto",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/com/algorand/algosdk/util:util",
        "@maven//:commons_codec_commons_codec",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
    ],
)
