
java_library(
    name = "crypto",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/com/algorand/algosdk/util:util",
        "@maven//:commons_codec_commons_codec",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:org_bouncycastle_bcprov_jdk15on", # unfortunate dep for parsing X.509 formats
    ],
    tags = [
        "maven_coordinates=commons-codec:commons-codec:1.12",
        "maven_coordinates=com.fasterxml.jackson.core:jackson-annotations:2.7.0",
        "maven_coordinates=org.bouncycastle:bcprov-jdk15on:1.61",
    ],
)
