
java_library(
    name = "transaction",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "//src/main/java/com/algorand/algosdk/crypto:crypto",
        "//src/main/java/com/algorand/algosdk/util:util",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@mavenjackson//:com_fasterxml_jackson_core_jackson_databind",
    ],
    tags = [
        "maven_coordinates=com.fasterxml.jackson.core:jackson-annotations:2.7.0",
        "maven_coordinates=com.fasterxml.jackson.core:jackson-databind:2.7.9",
    ],
)
