
java_library(
    name = "util",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    deps = [
        "@mavenjackson//:com_fasterxml_jackson_core_jackson_core",
        "@mavenjackson//:com_fasterxml_jackson_core_jackson_databind",
        "@mavenjackson//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:commons_codec_commons_codec",
        "@maven//:org_msgpack_jackson_dataformat_msgpack",
        "@maven//:org_bouncycastle_bcprov_jdk15on",
    ],
    tags = [
        "maven_coordinates=com.fasterxml.jackson.core:jackson-core:2.7.9",
        "maven_coordinates=com.fasterxml.jackson.core:jackson-databind:2.7.9",
        "maven_coordinates=com.fasterxml.jackson.core:jackson-annotations:2.7.0",
        "maven_coordinates=commons-codec:commons-codec:1.12",
        "maven_coordinates=org.msgpack:jackson-dataformat-msgpack:0.8.16",
    ],
)
