
java_library(
    name = "tests",
    testonly = 1,
    srcs = glob(["*.java"]),
    deps = [
        "//:algosdk",
        "@maven//:junit_junit",
    ],
)

java_test(
    name = "TestAddress",
    size = "small",
    runtime_deps = [
        ":tests",
    ],
)

java_test(
    name = "TestMultisigAddress",
    size = "small",
    runtime_deps = [
        ":tests",
    ],
)
