
java_library(
    name = "tests",
    testonly = 1,
    srcs = glob(["*.java"]),
    deps = [
        "//:algosdk",
        "@maven//:junit_junit",
	"@mavenjackson//:com_fasterxml_jackson_core_jackson_databind",
    ],
)

java_test(
    name = "TestTransaction",
    size = "small",
    runtime_deps = [
        ":tests",
    ],
)
