
java_library(
    name = "tests",
    testonly = 1,
    srcs = glob(["*.java"]),
    deps = [
        "//:algosdk",
        "@maven//:junit_junit",
        "@mavenjackson//:com_fasterxml_jackson_core_jackson_databind",
    ],
    tags = [
        "maven_coordinates=com.fasterxml.jackson.core:jackson-databind:2.7.9",
    ],
)

java_test(
    name = "TestTransaction",
    size = "small",
    runtime_deps = [
        ":tests",
    ],
)
