
java_library(
    name = "model",
    srcs = glob(["*.java"]),
    visibility = ["//visibility:public"],
    exports = [
    ],
    deps = [
        "@mavenforswagger//:io_swagger_swagger_annotations",
        "@mavenforswagger//:org_apache_commons_commons_lang3",
        "@mavenforswagger//:com_google_code_gson_gson",
    ],
    tags = [
        "maven_coordinates=io.swagger:swagger-annotations:1.5.18",
        "maven_coordinates=org.apache.commons:commons-lang3:3.6",
        "maven_coordinates=com.google.code.gson:gson:2.8.1",
    ],
)
